fixed mobile overflow bug

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,3 +50,8 @@ table {
 * {
 	box-sizing: border-box;
 }
+
+html, body {
+	height: 100vh;
+	overflow: hidden;
+}
